--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
 <head>
-	<title>Example Webpage Title</title>
+	<title>Web Design Components</title>
 </head>
 	<body>
 		<h1 id='bookmark'>This is a header</h1>
@@ -48,6 +47,20 @@
 				</table></td>
 			</tr>
 		</table>
-		<!--40 -->
+		<ul>
+			<li><img src= 'exampleicon.png' alt='exampleicon' width='25'></li>
+			<li><img src= 'exampleicon.png' alt='exampleicon' width='25'></li>
+		</ul>
+
+		<form action="mailto:someone@example.com" method="post">
+			Name:<br>
+			<input type="text" name="name"><br>
+			Email:<br>
+			<input type="text" name="mail"><br>
+			<input type="submit" value="Send">
+			<input type="reset" value="Reset">
+		</form>
+
+		<!--55 -->
 	</body>
 </html
